# MIREA_Backend

./: .gitignore  README.md
W1/: docker-compose.yaml  dockerfile  style.css
W2-1/: drawer.php  functions.php
W2-2/: dockerfile
W2-3/: docker-compose.yaml  index.php
W2/W2-1/: docker-compose.yaml  drawer.php  index.php  styles.css
W2/W2-2/: index.php
W3/: .env  docker-compose.yaml
W3/db/init/: init.sql
W3/nginx/: nginx.conf
W3/nginx/html/: contacts.html  delivery.html
W3/php/src/: index.php
W4/: .env  composer.json  docker-compose.yaml  readme.md
W4/public/: index.php  playground.html
W4/storage/: clients.json
W5/: docker-compose.yaml  readme.md
W5/php/: composer.json  dockerfile
W5/postgres/: init.sql
W6/: .env  composer.json  docker-compose.yaml
W6/nginx/: default.conf
W6/php/: Dockerfile  composer.json
W6/src/: ChartGenerator.php  _bootstrap.php  fixtures.php  stats.php
W7/: QUICK_START.md  REFACTORING.md  composer.json  docker-compose.yaml  readme.md
W7/nginx/: default.conf
W8/: Cargo.toml  Dockerfile  Dockerfile.python  Rocket.toml  docker-compose.yaml  generate_charts.py  nginx.conf  requirements.txt
W8-python/: docker-compose.yaml  readme.md
W8-python/app/: Dockerfile  __init__.py  app.db  config.py  crud.py  fixtures.py  migrate_db.py  models.py  requirements.txt  run.py  wsgi.py
W8-python/nginx/: default.conf
W8/sql/: init.sql
W8/src/: main.rs
W8/static/: colorblind.css  dark.css  light.css
W8/static/charts/: charts_list.json  fixtures.json
W8/templates/: auth.html  auth.tera  private.html  private.tera
(+46 files in other folders)
