[package]
name = "pdf_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket            = { version = "0.5.0", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
tokio             = { version = "1", features = ["full"] }
sqlx              = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono            = "0.4"
uuid              = { version = "1.4", features = ["v4"] }
bcrypt            = "0.15"
rand              = "0.8"
once_cell         = "1.19"
redis             = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
